tests/cases/modules/ok/file_inline_bridge/child.ari
pub fn value() -> i64 {
  return super::Shared::seed() + 2;
}
