tests/cases/modules/errors/cycle_b.ari
mod cycle_a;

pub fn value() -> i64 {
  return 2;
}
